# Vex-Programming-language

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  try.py  vex.exe.spec
.github/workflows/: deploy-docs.yml  python-package.yml
docs/: DESIGN.md  INSTALLER.md  PUBLISHING.md  language-spec.md
docsite/: examples.md  index.md
docsite/.vitepress/: config.js
docsite/guide/: design.md  getting-started.md  language-spec.md
examples/: business_card.vex  calculator.vex  counter.vex  mood_board.vex  quiz.vex
scripts/: build_installer.bat  register_vex_file_assoc.ps1
src/: __init__.py  cli.py  codegen.py  errors.py  style_parser.py  view_parser.py  zones.py
src/vex/: __init__.py  cli.py
src/vex_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/vexlang/: __init__.py  cli.py  errors.py  interpreter.py  lexer.py  parser.py
tests/: test_logic_exec.py  test_style_parser.py  test_vexlang_integration.py  test_vexlang_parser.py  test_view_parser.py  test_zones.py
vex-vscode/: .vscodeignore  README.md  language-configuration.json  package.json
vex-vscode/icons/: vex-icon-theme.json
vex-vscode/syntaxes/: vex.tmLanguage.json
